POC of multiple simultaneous strobes with multiple script processors

--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
 		<title>Tuner</title>
 
 		<script src="Smooth-0.1.7.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 		<script src="tuner.js"></script>
 	</head>
 
-	<body onload="init_audio()">
+	<body>
 		
 
-		<canvas id="strobe" width="256" height="100"></canvas>
+		<canvas class="strobe pitch_82.41" width="512" height="100"></canvas><br/>
+		<canvas class="strobe pitch_110.0" width="512" height="100"></canvas><br/>
+		<canvas class="strobe pitch_146.83" width="512" height="100"></canvas><br/>
+		<canvas class="strobe pitch_196.0" width="512" height="100"></canvas><br/>
+		<canvas class="strobe pitch_246.94" width="512" height="100"></canvas><br/>
+		<canvas class="strobe pitch_329.63" width="512" height="100"></canvas><br/>
 	</body>
 </html>
 
